--- a/107LMSGIProyectoLMGSI/examen/02/lasaga.html
+++ b/107LMSGIProyectoLMGSI/examen/02/lasaga.html
@@ -15,7 +15,7 @@
         <h1>LOS JUEGOS DEL HAMBRE</h1>
         <h4 class="suzanne">Suzanne Collins</h4>
     </header>
-    <nav><!-- Menu de navegación-->
+    <nav><!-- Menu de navegacion-->
         <ul><!-- La lista de enlaces-->
             <li ><a class="subrayado" href="inicio.html">INICIO</a></li> <!-- li etiqueta para las lineas de un lista-->
             <li><a class="subrayado" href="personajes.html">PERSONAJES</a></li>
