--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
     <footer>
         <div id="iconos">
-            <a href="#"> <i class="fa-brands fa-github" style="font-size: 50px; color:black; "></i></a>
+            <a href="https://github.com/verogmayo/107ProyectoDAW"> <i class="fa-brands fa-github" style="font-size: 50px; color:black; "></i></a>
            <a href="feed/rss.xml"><i id="rss" class="fa-solid fa-rss" style="font-size: 50px; color: #ee802f;"></i></a>
            <a href="https://www.imprimebalu.com/"> <img src="Webroot/media/images/logoBalu.png" alt="" height="40" width="40"></a>
            <a href="https://validator.w3.org/check?uri=https://daw107.ieslossauces.es">
